@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclPort.h,v 1.8 2004/03/17 18:14:14 das Exp $
+ * RCS: @(#) $Id: tclPort.h,v 1.9 2004/04/24 05:59:18 das Exp $
  */
 
 #ifndef _TCLPORT
@@ -19,9 +19,9 @@
 #include "tcl.h"
 
 #if defined(__WIN32__)
-#   include "../win/tclWinPort.h"
+#   include "tclWinPort.h"
 #else
-#   include "../unix/tclUnixPort.h"
+#   include "tclUnixPort.h"
 #endif
 
 #if !defined(LLONG_MIN)
